Sistemata formattazione stili

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
 <footer role="contentinfo">
   <div class="grid">
+
     <div class="unit one-third center-on-mobiles">
-      <p>The contents of this website are &copy;&nbsp;{{ site.time | date: '%Y' }} <a href="http://tom.preston-werner.com/">Tom Preston-Werner</a> under the terms of the <a href="{{ site.repository }}/blob/master/LICENSE">MIT&nbsp;License</a>.</p>
+      <p>
+        &copy;&nbsp; Copyright {{ site.time | date: '%Y' }} by <a href="http://www.apexnet.it/">Apex-net srl</a>
+      </p>
     </div>
+
     <div class="unit two-thirds align-right center-on-mobiles">
       <p>
         Proudly hosted by
@@ -11,5 +15,6 @@
         </a>
       </p>
     </div>
+
   </div>
 </footer>
