--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
     <div class="unit one-third center-on-mobiles">
       <h1>
         <a href="/">
-          <span class="sr-only">Jekyll</span>
-          <img src="/img/logo-2x.png" width="249" height="115" alt="Jekyll Logo">
+          <span class="sr-only">iCommerce</span>
+          <img src="/img/icommerce-logo.png" width="50%" height="50%" alt="iCommerce Logo">
         </a>
       </h1>
     </div>
