--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -113,7 +113,7 @@ nav {
   a {
     float: left;
     width: 100%;
-    background-color: #333;
+    background-color: #ffffff; /* 333 */    
     color: #000000;
     text-align: center;
     text-transform: uppercase;
@@ -413,7 +413,7 @@ article {
 
 @media (min-width: 768px) {
   article {
-    padding: 40px 40px 30px;
+    padding: 40px 0px 30px;
     font-size: 21px;
   }
 }
