--- a/_includes/news_contents_mobile.html
+++ b/_includes/news_contents_mobile.html
@@ -1,11 +1,11 @@
 <div class="docs-nav-mobile unit whole show-on-mobiles">
   <select onchange="if (this.value) window.location.href=this.value">
-    <option value="">Navigate the blog…</option>
+    <option value="">Navigate the news…</option>
     <option value="{{ site.baseurl }}/news/">Home</option>
-    <optgroup label="v1.x">
+    <!-- <optgroup label="v1.x"> -->
       {% for post in site.posts %}
       <option value="{{ post.url }}">{{ post.title }}</option>
-      {% endfor %}
+    <!--  {% endfor %} -->
     </optgroup>
   </select>
 </div>
