--- a/css/screen.css
+++ b/css/screen.css
@@ -399,7 +399,7 @@ td, th {
   .highlight .gd {
     color: #0000c0;
     font-weight: bold;
-    background-color: teal; }
+    background-color: #008080; }
   .highlight .ge {
     color: #c000c0;
     text-decoration: underline; }
@@ -653,7 +653,7 @@ nav li {
   padding: 8px 2px; }
 .mobile-nav .current a {
   /* background-color: #; */
-  background-color: #35beb9;
+  background-color: #35BEB9;
   color: #FFFFFF;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 1px 5px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 1px 5px rgba(0, 0, 0, 0.5);
@@ -777,7 +777,7 @@ footer {
     background-image: -moz-linear-gradient(top, #f7f7f7 0%, #cfcfcf 7%, #aaaaaa 100%);
     background-image: -o-linear-gradient(top, #f7f7f7 0%, #cfcfcf 7%, #aaaaaa 100%);
     background-image: linear-gradient(top, #f7f7f7 0%, #cfcfcf 7%, #aaaaaa 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7f7f7', endColorstr='#aaaaaa',GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#aaaaaa',GradientType=0 );
     border-bottom: 1px solid #111; }
   .quickstart .code .shell {
     padding: 20px;
@@ -894,7 +894,7 @@ aside {
     padding: 0 0 10px 30px;
     margin-left: -30px;
     display: inline-block;
-    border-bottom: 1px solid #cc0000; }
+    border-bottom: 1px solid #c00; }
   aside ul {
     padding-left: 0; }
     aside ul:first-child {
@@ -906,7 +906,7 @@ aside {
       position: relative; }
     aside li.current a:before {
       content: "";
-      border-color: transparent transparent transparent #35beb9;
+      border-color: transparent transparent transparent #35BEB9;
       border-style: solid;
       border-width: 10px;
       width: 0;
@@ -1007,14 +1007,14 @@ article h2:first-child {
   background-image: -webkit-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
   background-image: -moz-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
   background-image: -o-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
-  background-image: linear-gradient(to bottom, #7fc8e2 0%, #35beb9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e2812', endColorstr='#6f0d0d',GradientType=0 ); }
+  background-image: linear-gradient(to bottom, #7FC8E2 0%, #35BEB9 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e2812', endColorstr='#6f0d0d',GradientType=0 ); }
   .post-category:before {
     content: "";
     position: absolute;
     top: -10px;
     left: 0;
-    border-color: transparent #35beb9 #35beb9 transparent;
+    border-color: transparent #35BEB9 #35BEB9 transparent;
     border-style: solid;
     border-width: 5px;
     width: 0;
@@ -1191,7 +1191,7 @@ thead {
   background-image: -moz-linear-gradient(top, #3a3a3a 0%, #1e1e1e 100%);
   background-image: -o-linear-gradient(top, #3a3a3a 0%, #1e1e1e 100%);
   background-image: linear-gradient(to bottom, #3a3a3a 0%, #1e1e1e 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3a3a3a', endColorstr='#1e1e1e',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a3a3a', endColorstr='#1e1e1e',GradientType=0 ); }
   thead th {
     position: relative;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -1271,7 +1271,7 @@ code.output {
   background-image: -moz-linear-gradient(top, #7e6d42 0%, #5c4e35 100%);
   background-image: -o-linear-gradient(top, #7e6d42 0%, #5c4e35 100%);
   background-image: linear-gradient(to bottom, #7e6d42 0%, #5c4e35 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7e6d42', endColorstr='#5c4e35',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7e6d42', endColorstr='#5c4e35',GradientType=0 ); }
 
 @media (max-width: 568px) {
   .note {
@@ -1303,7 +1303,7 @@ code.output {
 .note:after {
   content: '\2605';
   /* color: #; */
-  color: #35beb9;
+  color: #35BEB9;
   position: absolute;
   top: 14px;
   left: 14px;
@@ -1319,7 +1319,7 @@ code.output {
   background-image: -moz-linear-gradient(top, #0389aa 0%, #00617f 100%);
   background-image: -o-linear-gradient(top, #0389aa 0%, #00617f 100%);
   background-image: linear-gradient(to bottom, #0389aa 0%, #00617f 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0389aa', endColorstr='#00617f',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0389aa', endColorstr='#00617f',GradientType=0 ); }
 
 .warning {
   background-color: #9e2812;
@@ -1329,7 +1329,7 @@ code.output {
   background-image: -moz-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
   background-image: -o-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
   background-image: linear-gradient(to bottom, #9e2812 0%, #6f0d0d 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e2812', endColorstr='#6f0d0d',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9e2812', endColorstr='#6f0d0d',GradientType=0 ); }
 
 .unreleased {
   background-color: #cd9239;
@@ -1339,7 +1339,7 @@ code.output {
   background-image: -moz-linear-gradient(top, #cd9239 0%, #a27528 100%);
   background-image: -o-linear-gradient(top, #cd9239 0%, #a27528 100%);
   background-image: linear-gradient(to bottom, #cd9239 0%, #a27528 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cd9239', endColorstr='#a27528',GradientType=0 ); }
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cd9239', endColorstr='#a27528',GradientType=0 ); }
 
 .info:before {
   border-color: transparent #00617f #00617f transparent; }
@@ -1363,7 +1363,7 @@ code.output {
 .warning:after {
   content: '\203C';
   /* color: #; */
-  color: #35beb9;
+  color: #35BEB9;
   position: absolute;
   top: 15px;
   left: 15px;
