Sistemato link modifica

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -10,7 +10,7 @@ layout: default
       <div class="unit four-fifths">
         <article>
           <div class="improve right hide-on-mobiles">
-            <a href="https://github.com/Apex-net/{{ site.baseurl }}/edit/master/_docs/{{ page.path }}"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+            <a href="{{site.repository}}/edit/master/{{ page.relative_path }}"><i class="fa fa-pencil"></i> &nbsp;Modifica</a>
           </div>
           <h1>{{ page.title }}</h1>
           {{ content }}
