--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -18,7 +18,10 @@
     <a href="{{ site.baseurl }}/news/">News</a>
   </li>
   <li>
-    <a href="http://support.apexnet.it">Supporto</a>
+    <a href="http://support.apexnet.it"> <span class="show-on-mobiles"></span><span class="hide-on-mobiles">Supporto</span></a>
+  </li>
+  <li>
+    <a href="http://lm.apexnet.it"> <span class="show-on-mobiles"></span><span class="hide-on-mobiles">Entra</span> </a>
   </li>
 <!--
   <li>
