--- a/_includes/docs_contents.html
+++ b/_includes/docs_contents.html
@@ -1,3 +1,10 @@
+{% comment %}
+Titoli dei menu laterali dei documenti
+
+http://www.randomsnippets.com/2008/02/12/how-to-hide-and-show-your-div/
+
+{% endcomment %}
+
 <div class="unit one-fifth hide-on-mobiles">
   <aside>
     {% for section in site.data.docs %}
