--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
     <div class="unit one-third center-on-mobiles">
       <p>
-        &copy;&nbsp; Copyright {{ site.time | date: '%Y' }} by <a href="http://www.apexnet.it/">Apex-net srl</a>
+        &copy;&nbsp; Copyright {{ site.time | date: '%Y' }} by <a href="http://www.wedoit.io/">WEDO srl</a>
       </p>
     </div>
 
